--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="arsimi-i-larte.html">Arsimi i Larte</a></li>
-                <li><a href="arsimi-baze.html">Arsimi Baze</a></li>
-                <li><a href="arsimi-mesem.html">Arsimi i Mesem</a></li>
+                <li><a href="html/arsimi-i-larte.html">Arsimi i Larte</a></li>
+                <li><a href="html/arsimi-baze.html">Arsimi Baze</a></li>
+                <li><a href="html/arsimi-mesem.html">Arsimi i Mesem</a></li>
                 
             </ul>
         </nav>
